--- a/app.scss
+++ b/app.scss
@@ -9,6 +9,16 @@
   flex-wrap: wrap;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.flex-column.buttons {
+  gap: var(--gap-sm);
+}
+
 .flex-row-item {
   flex: 1 0 250px;
   box-sizing: border-box;
@@ -18,4 +28,65 @@
 .router-link-active,
 .router-link-active > *:not(.username) {
   color: var(--color-red) !important;
+}
+
+.link__button {
+  text-decoration: none;
+}
+
+.grid-display.flow {
+  display: flex;
+  flex-direction: column;
+
+  .grid-display__item {
+    .value {
+      font-size: 1.5rem;
+    }
+  }
+}
+.grid-display {
+  display: grid;
+  grid-gap: var(--gap-md);
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+
+  .grid-display__item {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: var(--color-bg);
+    border-radius: var(--radius-md);
+    padding: var(--gap-lg);
+    gap: var(--gap-md);
+
+    .label {
+      color: var(--color-base);
+      font-weight: bold;
+      font-size: 1rem;
+    }
+
+    .value {
+      color: var(--color-contrast);
+      font-weight: bold;
+      font-size: 2rem;
+    }
+
+    .goto-link {
+      margin-top: auto;
+    }
+
+    .smaller-value {
+      font-size: 0.85rem;
+      font-style: italic;
+      color: var(--color-base);
+    }
+  }
+}
+
+.grid-display.width-12 {
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+}
+
+.grid-display.width-16 {
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
 }
